--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<h1>Olá, mundo!</h1>
 	<p>Clique no botão para mudar a cor de fundo da página:</p>
 	<button id="botao" onclick="mudarCor()">Clique aqui</button>
+	<p>Cada clicada é um tapa em Matheus Laidler</p>
 	<script>
 		function mudarCor() {
 			document.body.style.backgroundColor = "green";
