--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Exemplo HTML, CSS e JavaScript</title>
 	<style>
 		#botao {
-			background-color: blue;
+			background-color: black;
 			color: white;
 			padding: 10px;
 			border: none;
@@ -17,10 +17,12 @@
 	<h1>Olá, mundo!</h1>
 	<p>Clique no botão para mudar a cor de fundo da página:</p>
 	<button id="botao" onclick="mudarCor()">Clique aqui</button>
-	<p>Cada clicada é um tapa em Matheus Laidler</p>
+	<p>Cuidado pra não me deixar vermelho... hihi</p>
+	<br>
+	<a>Uma clicada é um tapa em Matheus Laidler :D</a>
 	<script>
 		function mudarCor() {
-			document.body.style.backgroundColor = "green";
+			document.body.style.backgroundColor = "red";
 		}
 	</script>
 </body>
